--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Thrive Neighborhood Market & Community Garden</title>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="stylesheets/app.css" />
-    <link rel="stylesheet" href="bower_components/foundation/css/foundation.css" />
-    <script src="bower_components/modernizr/modernizr.js"></script>
+    <link rel="stylesheet" href="stylesheets/foundation.css" />
   </head>
   <body>
     <div class="row">
