update meta data

--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="community garden, neighborhood market, St. Paul's Episcopal Church" />
+    <meta name="description" content="Thrive Neighborhood Market & Community Garden Coming Summer 2014" />
+    <meta property="og:url" content="http://www.thrivemarket.org">
+    <meta property="og:title" content="Thrive Neighborhood Market & Community Garden">
+    <meta property="og:description" content="Coming Summer 2014">
+    <meta property="og:image" content="http://jameswilliamiii.github.io/thrive_market/images/thrive_logo_site.png">
     <title>Thrive Neighborhood Market & Community Garden</title>
     <link href='http://fonts.googleapis.com/css?family=Oswald' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="stylesheets/app.css" />
