move text below logo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="community garden, neighborhood market, St. Paul's Episcopal Church" />
     <meta name="description" content="Thrive Neighborhood Market & Community Garden Coming Summer 2014" />
-    <meta property="og:url" content="http://www.thrivemarket.org">
+    <meta property="og:url" content="http://thrivemarket.org">
     <meta property="og:title" content="Thrive Neighborhood Market & Community Garden">
     <meta property="og:description" content="Coming Summer 2014">
     <meta property="og:image" content="http://jameswilliamiii.github.io/thrive_market/images/thrive_logo_site.png">
@@ -16,14 +16,13 @@
   </head>
   <body>
     <div class="row">
-      <div class="large-12 columns">
-        <h1 class="coming_soon center">Coming Summer 2014</h1>
-      </div>
-    </div>
-
-    <div class="row">
       <div class="large-12 columns center">
         <img src="images/thrive_logo_site.png", alt="Thrive Logo" class="coming-soon-logo">
+      </div>
+    </div>
+    <div class="row">
+      <div class="large-12 columns">
+        <h1 class="coming_soon center">Coming Summer 2014</h1>
       </div>
     </div>
   </body>
